src/test/ui/unique-pinned-nocopy.stderr
error[E0599]: no method named `clone` found for struct `std::boxed::Box<R>` in the current scope
  --> $DIR/unique-pinned-nocopy.rs:12:16
   |
LL | struct R {
   | -------- doesn't satisfy `R: std::clone::Clone`
...
LL |     let _j = i.clone();
   |                ^^^^^ method not found in `std::boxed::Box<R>`
   | 
  ::: $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL | pub struct Box<T: ?Sized>(Unique<T>);
   | ------------------------------------- doesn't satisfy `std::boxed::Box<R>: std::clone::Clone`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `std::sync::Arc<std::boxed::Box<R>>` here
   |        the method is available for `std::rc::Rc<std::boxed::Box<R>>` here
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `R: std::clone::Clone`
           which is required by `std::boxed::Box<R>: std::clone::Clone`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
